@@ -59,6 +59,27 @@
                 </code>
            </summary>
             <bugs>
+                <bug id="1117" tool="jira">
+                    <description>
+						Fixed problem with setting type of untyped attribute 
+						through binding file.
+                    </description>
+                    <contributor>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </contributor>
+                    <submitter>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </submitter>
+                    <reporter>
+                        <name>Neil Taylor</name>
+                        <email>neiltaylor@mac.com</email>
+                    </reporter>
+                    <type>Bug</type>
+                    <module>XML</module>
+                    <date>20061009</date>
+                </bug>
                 <bug id="1137" tool="jira">
                     <description>
 						Fixed problem with special characters in enumerations
