@@ -2,6 +2,11 @@
 SVN
 -------------------------------
 
+XML:   Resolved issue CASTOR-1117 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
+       Fixed problem with setting type of untyped attribute through binding file.
+       Details: http://jira.codehaus.org/browse/CASTOR-1117
+       (Werner - 20061009)
+
 XML:   Resolved issue CASTOR-1137 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
        Fixed problem with special characters in enumerations.
        Details: http://jira.codehaus.org/browse/CASTOR-1137
